feat: page browser dialog + various improvements

--- a/server/views/base.pug
+++ b/server/views/base.pug
@@ -40,20 +40,28 @@ html(lang=siteConfig.lang)
 
     //- CSS
     
+      
+    link(
+      type='text/css'
+      rel='stylesheet'
+      href='/_assets-legacy/css/app.36b4c9522aa279325701.css'
+    )
+      
+    
 
     //- JS
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/runtime.js'
+      src='/_assets-legacy/js/runtime.js?1671237890'
       )
       
     
       
     script(
       type='text/javascript'
-      src='/_assets-legacy/js/app.js'
+      src='/_assets-legacy/js/app.js?1671237890'
       )
       
     
