fix: asciidoc editor + rendering improvements

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -356,24 +356,38 @@
     }
   }
 
+  // ---------------------------------
+  // ASCIIDOC SPECIFIC
+  // ---------------------------------
+
   .admonitionblock {
     margin: 1rem 0;
     position: relative;
 
-    ::before {
-      display: inline-block;
-      font: normal normal normal 24px/1 "Material Design Icons", sans-serif !important;
-    }
     table {
-      border-collapse:separate;
       border: none;
+      background-color: transparent;
+      width: 100%;
     }
-    td:first-child {
+
+    td.icon {
       border-bottom-left-radius: 7px;
       border-top-left-radius: 7px;
+      text-align: center;
+      width: 56px;
+
+      &::before {
+        display: inline-block;
+        font: normal normal normal 24px/1 "Material Design Icons", sans-serif !important;
+      }
     }
+
+    td.content {
+      border-bottom-right-radius: 7px;
+      border-top-right-radius: 7px;
+    }
+
     &.note {
-      background-color: mc('blue', '50');
       td.icon {
         background-color: mc('blue', '300');
         color: mc('blue', '50');
@@ -383,11 +397,15 @@
       }
       td.content {
         color: darken(mc('blue', '900'), 10%);
-        background-color: mc('blue', '50') !important;
+        background-color: mc('blue', '50');
+
+        @at-root .theme--dark & {
+          background-color: mc('blue', '900');
+          color: mc('blue', '50');
+        }
       }
     }
     &.tip {
-      background-color: mc('green', '50');
       td.icon {
         background-color: mc('green', '300');
         color: mc('green', '50');
@@ -397,25 +415,35 @@
       }
       td.content {
         color: darken(mc('green', '900'), 10%);
-        background-color: mc('green', '50') !important;
+        background-color: mc('green', '50');
+
+        @at-root .theme--dark & {
+          background-color: mc('green', '900');
+          color: mc('green', '50');
+        }
       }
     }
     &.warning {
-      background-color: mc('orange', '50') !important;
+      background-color: transparent !important;
+
       td.icon {
         background-color: mc('orange', '300');
-        color: mc('orange', '100');
+        color: #FFF;
         &::before {
           content: "\F0026";
         }
       }
       td.content {
         color: darken(mc('orange', '900'), 10%);
-        background-color: mc('orange', '50') !important;
+        background-color: mc('orange', '50');
+
+        @at-root .theme--dark & {
+          background-color: darken(mc('orange', '900'), 5%);
+          color: mc('orange', '100');
+        }
       }
     }
     &.caution {
-      background-color: mc('purple', '50');
       td.icon {
         background-color: mc('purple', '300');
         color: mc('purple', '50');
@@ -425,11 +453,15 @@
       }
       td.content {
         color: darken(mc('purple', '900'), 10%);
-        background-color: mc('purple', '50') !important;
+        background-color: mc('purple', '50');
+
+        @at-root .theme--dark & {
+          background-color: mc('purple', '900');
+          color: mc('purple', '100');
+        }
       }
     }
     &.important {
-      background-color: mc('red', '50');
       td.icon {
         background-color: mc('red', '300');
         color: mc('red', '50');
@@ -439,24 +471,31 @@
       }
       td.content {
         color: darken(mc('red', '900'), 10%);
-        background-color: mc('red', '50') !important;
+        background-color: mc('red', '50');
+
+        @at-root .theme--dark & {
+          background-color: mc('red', '900');
+          color: mc('red', '100');
+        }
       }
     }
-
-  }
-  .title {
-    font-style: italic;
-    font-size: 10rem;
-    color: #7a2717;
   }
 
   .exampleblock {
-    .content {
-      border-style: solid;
-      border-width: 1px;
-      border-color: #e6e6e6;
-      margin-bottom: 1.25em;
-      padding: 1.25em;
+    > .title {
+      font-style: italic;
+      font-size: 1rem !important;
+      color: #7a2717;
+
+      @at-root .theme--dark & {
+        color: mc('brown', '300');
+      }
+    }
+    > .content {
+      border: 1px solid mc('grey', '200');
+      border-radius: 7px;
+      margin-bottom: 12px;
+      padding: 16px;
     }
   }
   // ---------------------------------
