Use first-child for first paragraph only

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -685,7 +685,9 @@
         display:inline-block;
         vertical-align:top;
         padding-top:0;
-	width: 100%;
+	&:first-child {
+		width: 100%;
+	}
       }
     }
   }
