fix: make list paragraphs use 100% width (#6273)
* Adds width 100% for ol paragraph

---------

Co-authored-by: Nicolas Giard <github@ngpixel.com>

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -685,6 +685,10 @@
         display:inline-block;
         vertical-align:top;
         padding-top:0;
+        
+        &:first-child {
+          width: 100%;
+        }
       }
     }
   }
