qdrant engine implementation. * the qdrant-node library was modified a bit to allow points deletion, index configuration and api keys, therefore it is not in node_modules anymore but part of the project, this is not a big deal because it was basically a requests wrapper. * the init, query, created, updated, deleted and rebuild methods were implemented in the search engine module. * some client files were modified a bit to improve user experience when clicking a result: search-results.vue, page.vue and app.scss

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -356,6 +356,18 @@
     }
   }
 
+  .highlighted-on-select {
+    animation-name: fade;
+    animation-duration: 5s
+  }
+  @keyframes fade {
+    from {
+      background-color: #44ba81
+    }
+    to {
+      background-color: transparent
+    }
+  }
   // ---------------------------------
   // ASCIIDOC SPECIFIC
   // ---------------------------------
