--- a/server/views/page.pug
+++ b/server/views/page.pug
@@ -16,6 +16,7 @@ block body
       title=page.title
       description=page.description
       :tags=page.tags
+      :breadcrumbs-items=page.breadcrumbsItems
       created-at=page.createdAt
       updated-at=page.updatedAt
       author-name=page.authorName
