--- a/ux/src/css/page-contents.scss
+++ b/ux/src/css/page-contents.scss
@@ -133,7 +133,7 @@
 
     &::before {
       display: inline-block;
-      font: normal normal normal 24px/1 "Line Awesome Free", sans-serif;
+      font: normal normal normal 24px/1 "Material Design Icons", sans-serif;
       position: absolute;
       margin-top: -12px;
       top: 50%;
