fix: file manager rename + ltree path encode/decode + various improvements

--- a/ux/src/css/page-contents.scss
+++ b/ux/src/css/page-contents.scss
@@ -249,6 +249,11 @@
         border-color: $green-5;
       }
     }
+
+    .codeblock > code {
+      background-color: inherit;
+      color: inherit;
+    }
   }
 
   // ---------------------------------
