feat: search i18n + ux improvements

--- a/ux/src/css/animation.scss
+++ b/ux/src/css/animation.scss
@@ -37,6 +37,23 @@
   opacity: 0
 }
 
+// -> Slide Up Transition
+
+.slide-up-enter-active,
+.slide-up-leave-active {
+  transition: all 0.25s ease-out;
+}
+
+.slide-up-enter-from {
+  opacity: 0;
+  transform: translateY(15px);
+}
+
+.slide-up-leave-to {
+  opacity: 0;
+  transform: translateY(-15px);
+}
+
 // -> fadeIn
 
 @keyframes fadeIn {
