feat: sidebar nav editor (wip)

--- a/ux/src/css/app.scss
+++ b/ux/src/css/app.scss
@@ -36,6 +36,10 @@ body::-webkit-scrollbar-thumb {
   font-family: 'Roboto Mono', Consolas, "Liberation Mono", Courier, monospace;
 }
 
+.text-wordbreak-all {
+  word-break: break-all;
+}
+
 // ------------------------------------------------------------------
 // THEME COLORS
 // ------------------------------------------------------------------
