research of a basics needs

--- a/client/scss/base/material.scss
+++ b/client/scss/base/material.scss
@@ -312,8 +312,8 @@ $material-colors: (
   ),
 
   'theme': (
-    'primary': #1976D2,
-    'secondary': #424242,
+    'primary': #048eb0,
+    'secondary': #ee7e00,
     'accent': #82B1FF,
     'error': #FF5252,
     'info': #2196F3,
